# flutter-keystore-plugin

./: .gitignore  Cargo.toml  README.md  pubspec.yaml
keystore-dart/: generated.dart
keystore-dart/lib/: generate_ffi.dart
lib/: flutter_keystore_plugin.dart  main.dart
src/: keystore.rs  lib.rs  main.rs  plugin.rs
